# web-edf-viewer

./: .gitignore  .travis.yml  LICENSE  README.md  fili.d.ts  index.html  index.php  package-lock.json  package.json  tsconfig.json  tslint.json
app/: .gitignore  package-lock.json  package.json  tslint.json  vue.config.js
app/public/: index.html
app/src/: App.vue  Worker.ts  constants.ts  router.ts  store.ts
assembly/: edf_viewer_worker_bg.wasm  filter.ts  index.ts
css/: app.a7b7454d.css
edf-viewer-app/: .gitignore  package-lock.json  package.json  tsconfig.json
edf-viewer-app/public/: index.html
edf-viewer-app/src/: App.vue  Worker.ts  constants.ts  main.ts  store.ts
edf-viewer-worker/: Cargo.toml  build.sh
edf-viewer-worker/src/: index.js  js_async_reader.rs  lib.rs  model.rs
edf-viewer-worker/src/filter/: mod.rs
edf-viewer-worker/src/montage/: mod.rs  model.rs
edf-viewer-worker/src/reader/: js_async_reader.rs  mod.rs
js/: app.3a90bfdc.js  app.3a90bfdc.js.map  app.9aaceb12.js  app.9aaceb12.js.map  app.dbf5c710.js  app.dbf5c710.js.map  app.ed8d9e40.js  app.ed8d9e40.js.map  app.fb4da82f.js  app.fb4da82f.js.map  chunk-vendors.8825c2fb.js  chunk-vendors.8825c2fb.js.map  montage.8efbe21b.js  montage.8efbe21b.js.map
public/: index.html
src/: app.ts  edfReader.ts  index.ts  main.ts  signalTransormer.ts  store.ts  tsconfig.json
src/components/: Menubar.vue  SelectFile.vue
src/edfReader/: PromiseFileReader.ts  edfReader.ts  fileParser.ts
src/model/: montage.ts
src/views/: Montage.vue  Viewer.vue
worker/: build.sh
worker/src/: lib.rs  (+1 more)
(+25 files in other folders)
