[package]
name = "edf-viewer-worker"
version = "0.1.0"
authors = ["Maxime Leprince <maxime.leprince@bioserenity.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]



[dependencies]
cfg-if = "0.1.2"
js-sys = "0.3.16"
serde = "1.0.89"
serde_derive = "1.0.89"
edf-reader = "0.6.0"
futures = "0.1"
wasm-bindgen-futures = "0.3.19"
biquad = "0.2.0"
line_drawing = "0.7.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.42"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3.19"
features = [
  "console",
  "FileReader",
  "File",
  "Blob",
  "CanvasRenderingContext2d",
  "ImageData",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Element"
]



[dev-dependencies]
wasm-bindgen-test = "0.2"
predicates = "1.0"

[profile.release]
debug=true
